Add another limitation for MUSIC

--- a/MUSIC_simulated.ipynb
+++ b/MUSIC_simulated.ipynb
@@ -886,7 +886,9 @@
    "source": [
     "Our implementation only detects angles in $[0, \\frac{\\pi}{2}]$ because of the symmetry of complex exponentials, thus we always assume that the source angles are in that range, which is a strong assumption and not necessarily applicable in real life applications.\n",
     "\n",
-    "For real signals, the results are not as clear: when simulating with pyroom acoustics, the detected angle for one source is not very precise. For both types or \"real data\", the spectra are not very clear, they look more like sinusoids than peaks at certain directions. (todo, why???)"
+    "For real signals, the results are not as clear: when simulating with pyroom acoustics, the detected angle for one source is not very precise. For both types or \"real data\", the spectra are not very clear, they look more like sinusoids than peaks at certain directions. (todo, why???)\n",
+    "\n",
+    "Finally the main issue is that MUSIC assumes a narrowband signal (which is not always the case). As above, we are constrained to choose a single frequency of interest while many other frequencies may be relevant."
    ]
   },
   {
