Disable caching (fuck HF caching)

--- a/MUSIC_ML_stuff.ipynb
+++ b/MUSIC_ML_stuff.ipynb
@@ -56,7 +56,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import torch\n",
-        "from datasets import load_from_disk\n",
+        "from datasets import load_from_disk, disable_caching\n",
         "import torch.optim as optim\n",
         "import yaml\n",
         "\n",
@@ -65,7 +65,9 @@
         "from src.deep.deep_music import DeepMUSIC, rmspe_loss\n",
         "\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-        "n_splits = 4"
+        "n_splits = 4\n",
+        "\n",
+        "disable_caching() # FUCK HF CACHING"
       ]
     },
     {
