--- a/MUSIC_ML_stuff.ipynb
+++ b/MUSIC_ML_stuff.ipynb
@@ -87,6 +87,7 @@
         "# examples = load_examples()\n",
         "\n",
         "# for split in range(n_splits):\n",
+        "#     !rm -rf /root/.cache/huggingface\n",
         "#     ds = Dataset.from_generator(dataset_generator(examples, n_samples=200))\n",
         "#     ds.save_to_disk(os.path.join(OUT_DIRECTORY, f\"split{split}\", \"dataset\"))"
       ]
