--- a/MUSIC_ML_training.ipynb
+++ b/MUSIC_ML_training.ipynb
@@ -207,7 +207,7 @@
         "# model.load_state_dict(torch.load(model_path, map_location=torch.device('cpu')))\n",
         "\n",
         "model.to(device)\n",
-        "model.eval()"
+        "model"
       ]
     },
     {
