--- a/MUSIC_ML_inference.ipynb
+++ b/MUSIC_ML_inference.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "test_input, test_output, test_n_sources = create_dataset('test_non_coherent_dataset', 200, coherent=True)"
+    "test_input, test_output, test_n_sources = create_dataset('test_coherent_dataset', 200, coherent=True)"
    ]
   },
   {
