Remove useless checkout in training notebook

--- a/MUSIC_ML_training.ipynb
+++ b/MUSIC_ML_training.ipynb
@@ -25,8 +25,7 @@
       "outputs": [],
       "source": [
         "!git clone https://MichelDucartier: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@github.com/MichelDucartier/music_doa.git\n",
-        "%cd music_doa\n",
-        "!git checkout ml-stuff"
+        "%cd music_doa"
       ]
     },
     {
